--- a/blogs/css/base.css
+++ b/blogs/css/base.css
@@ -2,8 +2,15 @@
 * @Author: Marte
 * @Date:   2017-07-31 21:13:52
 * @Last Modified by:   Marte
-* @Last Modified time: 2017-07-31 21:14:04
+* @Last Modified time: 2017-08-01 08:41:08
 */
+
+/*样式初始化*/
 body{
     background-color: #efefef;
+}
+
+*{
+    margin:0px;
+    padding:0px;
 }
