--- a/blogs/css/index.css
+++ b/blogs/css/index.css
@@ -1,3 +1,28 @@
+@charset "UTF-8";
+/*头部 start*/
+.header {
+  width: 1000px;
+  margin: 0 auto;
+  height: 145px;
+  background-color: #3399cc;
+  color: #fff;
+  border-radius: 10px;
+  box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.5); }
+  .header .headerLogo {
+    line-height: 145px; }
+  .header .headerWord {
+    padding-right: 0px;
+    font-size: 16px;
+    font-family: "宋体";
+    padding-top: 40px; }
+    .header .headerWord p:last-child {
+      padding-left: 1em; }
+    .header .headerWord img {
+      margin-top: 25px;
+      width: 80px;
+      height: 80px;
+      float: right; }
 
+/*头部 end*/
 
 /*# sourceMappingURL=index.css.map */
