--- a/blogs/css/index.css
+++ b/blogs/css/index.css
@@ -10,24 +10,28 @@
   .header .headerLogo {
     line-height: 145px;
     text-align: center; }
+    .header .headerLogo img {
+      max-width: 100%;
+      max-height: 100%; }
   .header .headerWord {
     padding-right: 0px;
     font-size: 16px;
-    font-family: "宋体";
+    font-family: "楷体";
     padding: 0px;
     padding-top: 40px; }
     .header .headerWord p:first-of-type {
-      animation: headeranimation 3s ease-out 1s backwards; }
+      animation: headeranimation 2s ease-out 1s backwards; }
     .header .headerWord p:last-child {
       padding-left: 2em;
-      animation: headeranimation  3s ease-out 4s backwards; }
+      animation: headeranimation  2s ease-out 3s backwards; }
     .header .headerWord img {
       margin-top: 25px;
+      margin-right: 15px;
       width: 80px;
       height: 80px;
       float: right; }
 
-/*第一段文字动画*/
+/*文字动画*/
 @keyframes headeranimation {
   0% {
     transform: translate(0);
@@ -38,6 +42,25 @@
   100% {
     transform: translate(60px);
     opacity: 1; } }
+/*文字动画*/
 /*头部 end*/
+/*导航 start*/
+.navMarginTop10 {
+  margin-top: 10px; }
+  .navMarginTop10 .row {
+    margin: 0 auto; }
+    .navMarginTop10 .row .nav {
+      background-color: #FFCCCC;
+      border-radius: 5px;
+      box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.5); }
+      .navMarginTop10 .row .nav li {
+        padding: 0px;
+        text-align: center; }
+        .navMarginTop10 .row .nav li a {
+          color: #000;
+          font-size: 16px;
+          font-family: "楷体"; }
+
+/*导航 end*/
 
 /*# sourceMappingURL=index.css.map */
